[package]
name = "keyweave"
version = "0.2.4"
edition = "2021"
authors = ["Bart van der Braak <bart@vanderbraak.nl>"]
keywords = ["azure", "keyvault", "env"]
description = "Fetches secrets from Azure Key Vault and weaves them into a convenient .env file"
license = "GPL-3.0"
documentation = "https://docs.rs/keyweave"
repository = "https://github.com/bartvdbraak/keyweave/"

[dependencies]
anyhow = "1.0.79"
azure_core = "0.19.0"
azure_identity = "0.18.1"
azure_security_keyvault = "0.18.0"
clap = { version = "4.4.13", features = ["derive"] }
futures = "0.3.30"
paris = { version = "1.5.15", features = ["macros"] }
tokio = {version = "1.35.1", features = ["full"]}

[target.'cfg(all(target_os = "linux", any(target_env = "musl", target_arch = "arm", target_arch = "aarch64")))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.1.0"
predicates = "3.0.4"
serial_test = "3.0.0"
