[package]
name = "keyweave"
version = "0.2.7"
edition = "2021"
authors = ["Bart van der Braak <bart@vanderbraak.nl>"]
keywords = ["azure", "keyvault", "env"]
description = "Fetches secrets from Azure Key Vault and weaves them into a convenient .env file"
license = "GPL-3.0"
documentation = "https://docs.rs/keyweave"
repository = "https://github.com/bartvdbraak/keyweave/"

[dependencies]
anyhow = "1.0.82"
azure_core = "0.19.0"
azure_identity = "0.19.0"
azure_security_keyvault = "0.19.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
paris = { version = "1.5.15", features = ["macros"] }
tokio = {version = "1.37.0", features = ["full"]}

[target.'cfg(all(target_os = "linux", any(target_env = "musl", target_arch = "arm", target_arch = "aarch64")))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
serial_test = "3.1.0"
